Feb 21 - 2019/istio/demo/0_productpage_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-lb
  labels:
    app: productpage
spec:
  type: LoadBalancer
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
