Feb 21 - 2019/istio/demo/90_virtual_service_ratings_fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
  - match:
    - sourceLabels:
        app: reviews
        version: v2
    fault:
      abort:
        httpStatus: 500
        percent: 80
    route:
    - destination:
        host: ratings
        subset: v1
